--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -8,41 +8,53 @@ on:
 
 jobs:
   build:
-    name: Build + Publish
+    name: Build + Test
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
 
     steps:
     - uses: actions/checkout@v4
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 3.2.2  # Version plus récente et disponible
+        ruby-version: 3.2.2
 
     - name: Install dependencies
       run: bundle install
 
-    - name: Publish to GPR
-      run: |
-        mkdir -p $HOME/.gem
-        touch $HOME/.gem/credentials
-        chmod 0600 $HOME/.gem/credentials
-        printf -- "---\n:github: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-        gem build *.gemspec
-        gem push --key github --host https://rubygems.pkg.github.com/${OWNER} *.gem
-      env:
-        GEM_HOST_API_KEY: "Bearer ${{secrets.GITHUB_TOKEN}}"
-        OWNER: ${{ github.repository_owner }}
+    - name: Run Rubocop
+      run: bundle exec rubocop
 
-    - name: Publish to RubyGems
+    - name: Run application test
+      run: ruby src/main.rb
+
+    - name: Build Gem (Dry Run)
       run: |
-        mkdir -p $HOME/.gem
-        touch $HOME/.gem/credentials
-        chmod 0600 $HOME/.gem/credentials
-        printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
         gem build *.gemspec
-        gem push *.gem
-      env:
-        GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
+        echo "Gem built successfully (dry run)"
+        
+  # Commenter la publication pour l'instant
+  # publish:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: read
+  #     packages: write
+  #   steps:
+  #   - uses: actions/checkout@v4
+  #   - name: Set up Ruby
+  #     uses: ruby/setup-ruby@v1
+  #     with:
+  #       ruby-version: 3.2.2
+  #   - name: Build and Publish to GPR
+  #     run: |
+  #       mkdir -p $HOME/.gem
+  #       touch $HOME/.gem/credentials
+  #       chmod 0600 $HOME/.gem/credentials
+  #       printf -- "---\n:github: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+  #       gem build *.gemspec
+  #       gem push --key github --host https://rubygems.pkg.github.com/${OWNER} *.gem
+  #     env:
+  #       GEM_HOST_API_KEY: "Bearer ${{secrets.GITHUB_TOKEN}}"
+  #       OWNER: ${{ github.repository_owner }}
