--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['3.0', '3.1', '3.2', '3.3']  # Versions disponibles
+        ruby-version: ['3.1', '3.2', '3.3']  # Versions disponibles
 
     steps:
     - uses: actions/checkout@v4
@@ -27,5 +27,5 @@ jobs:
     - name: Run Rubocop
       run: bundle exec rubocop
 
-    - name: Run tests
-      run: bundle exec rake test
+    - name: Run application
+      run: ruby src/main.rb
